fix: nav settings dropdown break into components

--- a/src/ui/components/atoms/Buttons/NavButtons/NavSettingsButton/NavSettingsButton.css
+++ b/src/ui/components/atoms/Buttons/NavButtons/NavSettingsButton/NavSettingsButton.css
@@ -65,110 +65,6 @@
     transform: scale(1);
 }
 
-.all-notifications {
-    align-items: center;
-    padding: 16px 20px;
-    cursor: default;
-}
-
-.all-notifications-box {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.h6-notifications {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.2143;
-}
-
-.unread-messages {
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 1.2;
-    color: #8BA3CBFF;
-}
-
-.notifications-hr {
-    border-width: 0 0 thin;
-    border-color: #F2F4F7FF;
-    border-style: dashed;
-}
-
-
-.notifications {
-    max-height: 350px;
-    overflow-y: auto;
-}
-
-.notifications-unread {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    padding: 12px 20px;
-    background-color: #F5F7FAFF;
-    margin: 1px 0 0;
-}
-
-.notifications-unread:hover {
-    background-color: #DADADA6B;
-    transition: 0.2s;
-}
-
-.notifications-read {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    padding: 12px 20px;
-    margin: 1px 0 0;
-}
-
-.notifications-read:hover {
-    background-color: #DADADA6B;
-    transition: 0.2s;
-}
-
-.notifications-img {
-    display: flex;
-    align-items: center;
-    width: 35px;
-    min-width: 56px;
-    height: 35px;
-    font-size: 20px;
-    line-height: 1;
-}
-
-.notifications-box {
-    margin: 4px 0;
-}
-
-.notification-title {
-    font-weight: 500;
-    font-size: 13px;
-}
-
-.notification-info {
-    margin: 4px 0 0;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.25;
-    color: #8BA3CBFF;
-    display: flex;
-    align-items: center;
-}
-
-.notification-info-img {
-    margin-right: 4px;
-    width: 16px;
-    height: 16px;
-}
-
-.low-balance-alert-img {
-    background-color: #E6EFF5FF;
-    border-radius: 50%;
-}
-
 .notifications-view-all-button {
     padding: 8px;
 }
